asm3/src/main/zcode/parser/ZCodeParser.py
# Generated from main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'number'", 
                     "'bool'", "'string'", "'var'", "'dynamic'", "'func'", 
                     "'for'", "'until'", "'by'", "'break'", "'continue'", 
                     "'if'", "'else'", "'elif'", "'begin'", "'end'", "'return'", 
                     "'not'", "'and'", "'or'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
                     "'<-'", "'...'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'('", "')'", "'['", "']'", "','", "'\n'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "WS", "NUMBERTYPE", "BOOLTYPE", 
                      "STRINGTYPE", "VARTYPE", "DYNAMICTYPE", "FUNC", "FOR", 
                      "UNTIL", "BY", "BREAK", "CONTINUE", "IF", "ELSE", 
                      "ELIF", "BEGIN", "END", "RETURN", "NOT", "AND", "OR", 
                      "BOOLLIT", "NUMBERLIT", "STRINGLIT", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "EQUAL", "ASSIGN", "CONCAT", 
                      "STRINGCOMPARE", "NOTEQ", "LT", "MT", "LOEQ", "MOEQ", 
                      "LP", "RP", "LS", "RS", "COMMA", "NEWLINE", "IDENTIFIER", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_declprime = 2
    RULE_decl = 3
    RULE_funcdecl = 4
    RULE_paramlist = 5
    RULE_paramprime = 6
    RULE_param = 7
    RULE_numlist = 8
    RULE_primetype = 9
    RULE_stmt = 10
    RULE_vardeclstmt = 11
    RULE_array = 12
    RULE_arrayprime = 13
    RULE_arrayelem = 14
    RULE_assignstmt = 15
    RULE_exprlist = 16
    RULE_ifstmt = 17
    RULE_elifstmtlist = 18
    RULE_elifstmt = 19
    RULE_elsestmt = 20
    RULE_forstmt = 21
    RULE_breakstmt = 22
    RULE_continuestmt = 23
    RULE_returnstmt = 24
    RULE_funccallstmt = 25
    RULE_n_exprlist = 26
    RULE_exprprime = 27
    RULE_blockstmt = 28
    RULE_stmtlist = 29
    RULE_funcexpr = 30
    RULE_expr = 31
    RULE_expr1 = 32
    RULE_expr2 = 33
    RULE_expr3 = 34
    RULE_expr4 = 35
    RULE_expr5 = 36
    RULE_expr6 = 37
    RULE_operand = 38
    RULE_elemexpr = 39
    RULE_indexop = 40
    RULE_nnls = 41
    RULE_nls = 42

    ruleNames =  [ "program", "decllist", "declprime", "decl", "funcdecl", 
                   "paramlist", "paramprime", "param", "numlist", "primetype", 
                   "stmt", "vardeclstmt", "array", "arrayprime", "arrayelem", 
                   "assignstmt", "exprlist", "ifstmt", "elifstmtlist", "elifstmt", 
                   "elsestmt", "forstmt", "breakstmt", "continuestmt", "returnstmt", 
                   "funccallstmt", "n_exprlist", "exprprime", "blockstmt", 
                   "stmtlist", "funcexpr", "expr", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "expr6", "operand", "elemexpr", "indexop", 
                   "nnls", "nls" ]

    EOF = Token.EOF
    COMMENT=1
    WS=2
    NUMBERTYPE=3
    BOOLTYPE=4
    STRINGTYPE=5
    VARTYPE=6
    DYNAMICTYPE=7
    FUNC=8
    FOR=9
    UNTIL=10
    BY=11
    BREAK=12
    CONTINUE=13
    IF=14
    ELSE=15
    ELIF=16
    BEGIN=17
    END=18
    RETURN=19
    NOT=20
    AND=21
    OR=22
    BOOLLIT=23
    NUMBERLIT=24
    STRINGLIT=25
    ADD=26
    SUB=27
    MUL=28
    DIV=29
    MOD=30
    EQUAL=31
    ASSIGN=32
    CONCAT=33
    STRINGCOMPARE=34
    NOTEQ=35
    LT=36
    MT=37
    LOEQ=38
    MOEQ=39
    LP=40
    RP=41
    LS=42
    RS=43
    COMMA=44
    NEWLINE=45
    IDENTIFIER=46
    UNCLOSE_STRING=47
    ILLEGAL_ESCAPE=48
    ERROR_CHAR=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nnls(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.NnlsContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.NnlsContext,i)


        def decllist(self):
            return self.getTypedRuleContext(ZCodeParser.DecllistContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.nnls()
            self.state = 87
            self.decllist()
            self.state = 88
            self.nnls()
            self.state = 89
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declprime(self):
            return self.getTypedRuleContext(ZCodeParser.DeclprimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecllist" ):
                return visitor.visitDecllist(self)
            else:
                return visitor.visitChildren(self)




    def decllist(self):

        localctx = ZCodeParser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBERTYPE, ZCodeParser.BOOLTYPE, ZCodeParser.STRINGTYPE, ZCodeParser.VARTYPE, ZCodeParser.DYNAMICTYPE, ZCodeParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.declprime()
                pass
            elif token in [ZCodeParser.EOF, ZCodeParser.NEWLINE]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(ZCodeParser.DeclContext,0)


        def nls(self):
            return self.getTypedRuleContext(ZCodeParser.NlsContext,0)


        def declprime(self):
            return self.getTypedRuleContext(ZCodeParser.DeclprimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_declprime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclprime" ):
                return visitor.visitDeclprime(self)
            else:
                return visitor.visitChildren(self)




    def declprime(self):

        localctx = ZCodeParser.DeclprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declprime)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.decl()
                self.state = 96
                self.nls()
                self.state = 97
                self.declprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdecl(self):
            return self.getTypedRuleContext(ZCodeParser.FuncdeclContext,0)


        def vardeclstmt(self):
            return self.getTypedRuleContext(ZCodeParser.VardeclstmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = ZCodeParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.funcdecl()
                pass
            elif token in [ZCodeParser.NUMBERTYPE, ZCodeParser.BOOLTYPE, ZCodeParser.STRINGTYPE, ZCodeParser.VARTYPE, ZCodeParser.DYNAMICTYPE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.vardeclstmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ZCodeParser.FUNC, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LP(self):
            return self.getToken(ZCodeParser.LP, 0)

        def paramlist(self):
            return self.getTypedRuleContext(ZCodeParser.ParamlistContext,0)


        def RP(self):
            return self.getToken(ZCodeParser.RP, 0)

        def nnls(self):
            return self.getTypedRuleContext(ZCodeParser.NnlsContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(ZCodeParser.ReturnstmtContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(ZCodeParser.BlockstmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = ZCodeParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(ZCodeParser.FUNC)
            self.state = 107
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 108
            self.match(ZCodeParser.LP)
            self.state = 109
            self.paramlist()
            self.state = 110
            self.match(ZCodeParser.RP)
            self.state = 111
            self.nnls()
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.RETURN]:
                self.state = 112
                self.returnstmt()
                pass
            elif token in [ZCodeParser.BEGIN]:
                self.state = 113
                self.blockstmt()
                pass
            elif token in [ZCodeParser.EOF, ZCodeParser.NEWLINE]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramprime(self):
            return self.getTypedRuleContext(ZCodeParser.ParamprimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = ZCodeParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramlist)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBERTYPE, ZCodeParser.BOOLTYPE, ZCodeParser.STRINGTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.paramprime()
                pass
            elif token in [ZCodeParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(ZCodeParser.ParamContext,0)


        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def paramprime(self):
            return self.getTypedRuleContext(ZCodeParser.ParamprimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_paramprime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamprime" ):
                return visitor.visitParamprime(self)
            else:
                return visitor.visitChildren(self)




    def paramprime(self):

        localctx = ZCodeParser.ParamprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramprime)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.param()
                self.state = 122
                self.match(ZCodeParser.COMMA)
                self.state = 123
                self.paramprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primetype(self):
            return self.getTypedRuleContext(ZCodeParser.PrimetypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LS(self):
            return self.getToken(ZCodeParser.LS, 0)

        def numlist(self):
            return self.getTypedRuleContext(ZCodeParser.NumlistContext,0)


        def RS(self):
            return self.getToken(ZCodeParser.RS, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = ZCodeParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.primetype()
            self.state = 129
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.LS]:
                self.state = 130
                self.match(ZCodeParser.LS)
                self.state = 131
                self.numlist()
                self.state = 132
                self.match(ZCodeParser.RS)
                pass
            elif token in [ZCodeParser.RP, ZCodeParser.COMMA]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBERLIT(self):
            return self.getToken(ZCodeParser.NUMBERLIT, 0)

        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def numlist(self):
            return self.getTypedRuleContext(ZCodeParser.NumlistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_numlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumlist" ):
                return visitor.visitNumlist(self)
            else:
                return visitor.visitChildren(self)




    def numlist(self):

        localctx = ZCodeParser.NumlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_numlist)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(ZCodeParser.NUMBERLIT)
                self.state = 138
                self.match(ZCodeParser.COMMA)
                self.state = 139
                self.numlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(ZCodeParser.NUMBERLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimetypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBERTYPE(self):
            return self.getToken(ZCodeParser.NUMBERTYPE, 0)

        def BOOLTYPE(self):
            return self.getToken(ZCodeParser.BOOLTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(ZCodeParser.STRINGTYPE, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_primetype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimetype" ):
                return visitor.visitPrimetype(self)
            else:
                return visitor.visitChildren(self)




    def primetype(self):

        localctx = ZCodeParser.PrimetypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_primetype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.NUMBERTYPE) | (1 << ZCodeParser.BOOLTYPE) | (1 << ZCodeParser.STRINGTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardeclstmt(self):
            return self.getTypedRuleContext(ZCodeParser.VardeclstmtContext,0)


        def assignstmt(self):
            return self.getTypedRuleContext(ZCodeParser.AssignstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(ZCodeParser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(ZCodeParser.ForstmtContext,0)


        def breakstmt(self):
            return self.getTypedRuleContext(ZCodeParser.BreakstmtContext,0)


        def continuestmt(self):
            return self.getTypedRuleContext(ZCodeParser.ContinuestmtContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(ZCodeParser.ReturnstmtContext,0)


        def funccallstmt(self):
            return self.getTypedRuleContext(ZCodeParser.FunccallstmtContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(ZCodeParser.BlockstmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = ZCodeParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.vardeclstmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.assignstmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 147
                self.ifstmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 148
                self.forstmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 149
                self.breakstmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 150
                self.continuestmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 151
                self.returnstmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 152
                self.funccallstmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 153
                self.blockstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def primetype(self):
            return self.getTypedRuleContext(ZCodeParser.PrimetypeContext,0)


        def DYNAMICTYPE(self):
            return self.getToken(ZCodeParser.DYNAMICTYPE, 0)

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def LS(self):
            return self.getToken(ZCodeParser.LS, 0)

        def numlist(self):
            return self.getTypedRuleContext(ZCodeParser.NumlistContext,0)


        def RS(self):
            return self.getToken(ZCodeParser.RS, 0)

        def array(self):
            return self.getTypedRuleContext(ZCodeParser.ArrayContext,0)


        def VARTYPE(self):
            return self.getToken(ZCodeParser.VARTYPE, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_vardeclstmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardeclstmt" ):
                return visitor.visitVardeclstmt(self)
            else:
                return visitor.visitChildren(self)




    def vardeclstmt(self):

        localctx = ZCodeParser.VardeclstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_vardeclstmt)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ZCodeParser.NUMBERTYPE, ZCodeParser.BOOLTYPE, ZCodeParser.STRINGTYPE]:
                    self.state = 156
                    self.primetype()
                    pass
                elif token in [ZCodeParser.DYNAMICTYPE]:
                    self.state = 157
                    self.match(ZCodeParser.DYNAMICTYPE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 160
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 164
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ZCodeParser.ASSIGN]:
                    self.state = 161
                    self.match(ZCodeParser.ASSIGN)
                    self.state = 162
                    self.expr()
                    pass
                elif token in [ZCodeParser.EOF, ZCodeParser.ELSE, ZCodeParser.ELIF, ZCodeParser.NEWLINE]:
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.primetype()
                self.state = 167
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 168
                self.match(ZCodeParser.LS)
                self.state = 169
                self.numlist()
                self.state = 170
                self.match(ZCodeParser.RS)
                self.state = 174
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ZCodeParser.ASSIGN]:
                    self.state = 171
                    self.match(ZCodeParser.ASSIGN)
                    self.state = 172
                    self.array()
                    pass
                elif token in [ZCodeParser.EOF, ZCodeParser.ELSE, ZCodeParser.ELIF, ZCodeParser.NEWLINE]:
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 176
                self.match(ZCodeParser.VARTYPE)
                self.state = 177
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 178
                self.match(ZCodeParser.ASSIGN)
                self.state = 179
                self.expr()
                pass

